<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_webdav">WebDAV</string>
    <string name="hint_url">URL</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="description_webdav_url">Please enter the URL to a special folder on your WebDAV server. My Expenses will store its data inside this folder, it won\'t touch anything outside of it.</string>
    <string name="description_webdav_trust_certificate">The website uses a certificate, which is not trusted by Android.</string>
    <string name="label_trust_certificate">Trust this certificate</string>
    <string name="label_client_certificate">Client certificate (mTLS)</string>
    <string name="label_client_certificate_selected">Certificate: %s</string>
    <string name="label_client_certificate_not_selected">No client certificate selected</string>
    <string name="label_select_certificate">Select certificate</string>
    <string name="label_clear">Clear</string>
    <string name="error_client_cert_missing">The configured client certificate is no longer available on this device. Please reconfigure WebDAV and select a new certificate.</string>
    <string name="error_client_cert_access">Could not access the client certificate. Please check if the certificate is still installed.</string>
    <string name="validate_error_webdav_invalid_certificate">The certificate could not be trusted. It seems invalid.</string>
    <string name="validate_error_webdav_not_compliant">The URL does not point to a WebDAV resource.</string>
    <string name="validate_error_webdav_404">The URL does not exist on the server.</string>
    <string name="url_not_valid">URL not valid</string>
    <string name="no_client_cert_available">No client certificate available. Please install one in your system credentials.</string>
    <string name="label_more_options">More options</string>
</resources>
